  controller space.
  - Added RANSAC optimization to make calibration robust against
    outliers. Post-calibration clean-up via AlignPoints no longer
    required.
  - Added inverse calibration routine for cameras rigidly attached to
    a controller or tracker, for free-camera mixed reality recording.
- Added normal vector flipping to Kinect::DiskExtractor so that disks
  always point towards the camera.
- Added proper illumination support through dynamically-generated
  shaders to Kinect::Projector2.
- Added illumination button to streamer dialog in KinectViewer
  application when using Kinect::Projector2 projector class.
- Tweaked USB transfer pool sizes in Kinect::CameraV2 for better buffer
  overflow handling.
- Added rough latency mitigation to Kinect v2's low-level streaming
  handlers.
  - Removed hacky latency mitigation from KinectViewer vislet.
- Added texture mapping and illumination toggles to KinectViewer vislet
  and adapted file stream initialization to new Kinect::LensDistortion
  interface.
- Improved time stamp handling in Kinect v2 camera driver and
  KinectViewer vislet. Playing back recorded streams now has close to
  zero relative latency.
- Added ability to track one controller and use button events from
  another to ExtrinsicCalibrator, to calibrate a button-less Vive
  tracker.
- Added ability to play back files recorded from a tracked 3D camera to
  KinectViewer vislet.
- Fixed location of RealSense library dso in BuildRoot/Packages.Kinect
  to use .../$(LIBEXT) instead of .../lib, which should fix run-time
  search paths again.

Kinect-3.5:
- Bumped Vrui version requirement to 4.5-001.
- Added command line checking to KinectUtil utility and RawKinectViewer
  and KinectViewer applications.
- Fixed error messages when camera indices are out-of-bounds.

Kinect-3.6:
- Added check for GL_EXT_gpu_shader4 OpenGL extension in makefile, as it
  is required by Kinect::Projector2 but not supported by most IGPs.