@@ -1,2 +1,2 @@
-Kinect 3D Video Capture Project 3.6
-release date 06/29/2018
+Kinect 3D Video Capture Project 3.7
+release date 12/16/2018
